--- a/info.html
+++ b/info.html
@@ -146,9 +146,9 @@
                     <ul class="round round-4">
                         <li class="spacer">&nbsp;</li>
 
-                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> - <span class="bracket-score">0</span></li>
+                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> Field 1 <span class="bracket-score">0</span></li>
                         <li class="game game-spacer"></li>
-                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> - <span class="bracket-score">0</span></li>
+                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> 8:30pm <span class="bracket-score">0</span></li>
 
                         <li class="spacer">&nbsp;</li>
                     </ul>
@@ -291,103 +291,103 @@
                     <ul class="round round-1">
                         <li class="spacer">&nbsp;</li>
 
-                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> Yemen <span class="bracket-score">0</span></li>
+                        <li class="game game-top winner"><span class="flag-icon  flag-icon-bracket"></span> Yemen - Field 4<span class="bracket-score">1</span></li>
                         <li class="game game-spacer"></li>
-                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> Poland <span class="bracket-score">0</span></li>
+                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> Poland - 4:45pm<span class="bracket-score">0</span></li>
 
                         <li class="spacer">&nbsp;</li>
 
-                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> Iran <span class="bracket-score">0</span></li>
+                        <li class="game game-top winner"><span class="flag-icon  flag-icon-bracket"></span> Iran - Field 7 <span class="bracket-score">0 (5)</span></li>
                         <li class="game game-spacer"></li>
-                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> Iceland <span class="bracket-score">0</span></li>
+                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> Iceland - 4pm<span class="bracket-score">0 (4)</span></li>
 
                         <li class="spacer">&nbsp;</li>
 
-                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> Mexico <span class="bracket-score">0</span></li>
+                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> Mexico - Field 7 <span class="bracket-score">1</span></li>
                         <li class="game game-spacer"></li>
-                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> Lebanon <span class="bracket-score">0</span></li>
+                        <li class="game game-bottom winner"><span class="flag-icon flag-icon-bracket"></span> Lebanon - 4:45pm<span class="bracket-score">2</span></li>
 
                         <li class="spacer">&nbsp;</li>
 
-                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> India <span class="bracket-score">0</span></li>
+                        <li class="game game-top winner"><span class="flag-icon  flag-icon-bracket"></span> India - Field 4<span class="bracket-score">3</span></li>
                         <li class="game game-spacer"></li>
-                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> USA <span class="bracket-score">0</span></li>
+                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> USA - 4pm<span class="bracket-score">0</span></li>
 
                         <li class="spacer">&nbsp;</li>
 
-                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> Costa Rica <span class="bracket-score">0</span></li>
+                        <li class="game game-top winner"><span class="flag-icon  flag-icon-bracket"></span> Costa Rica - Field 6 <span class="bracket-score">3</span></li>
                         <li class="game game-spacer"></li>
-                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> Belgium <span class="bracket-score">0</span></li>
+                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> Belgium - 4:45pm <span class="bracket-score">1</span></li>
 
                         <li class="spacer">&nbsp;</li>
 
-                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> Nigeria <span class="bracket-score">0</span></li>
+                        <li class="game game-top winner"><span class="flag-icon  flag-icon-bracket"></span> Nigeria - Field 5 <span class="bracket-score">4</span></li>
                         <li class="game game-spacer"></li>
-                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> Turkey <span class="bracket-score">0</span></li>
+                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> Turkey - 4:00pm <span class="bracket-score">0</span></li>
 
                         <li class="spacer">&nbsp;</li>
 
 
-                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> Cuba <span class="bracket-score">0</span></li>
+                        <li class="game game-top winner"><span class="flag-icon  flag-icon-bracket"></span> Cuba - Field 5<span class="bracket-score">3</span></li>
                         <li class="game game-spacer"></li>
-                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> Sweden <span class="bracket-score">0</span></li>
+                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> Sweden - 4:45<span class="bracket-score">0</span></li>
 
                         <li class="spacer">&nbsp;</li>
 
-                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> Fiji <span class="bracket-score">0</span></li>
+                        <li class="game game-top winner"><span class="flag-icon  flag-icon-bracket"></span> Fiji - Field 6 <span class="bracket-score">3</span></li>
                         <li class="game game-spacer"></li>
-                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> Croatia <span class="bracket-score">0</span></li>
+                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> Croatia - 4:00pm<span class="bracket-score">1</span></li>
 
                         <li class="spacer">&nbsp;</li>
                     </ul>
                     <ul class="round round-2">
                         <li class="spacer">&nbsp;</li>
 
-                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> - <span class="bracket-score">0</span></li>
+                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> Yemen - Field 1<span class="bracket-score">0</span></li>
                         <li class="game game-spacer"></li>
-                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> - <span class="bracket-score">0</span></li>
+                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> Iran - 6:15pm <span class="bracket-score">0</span></li>
 
                         <li class="spacer">&nbsp;</li>
 
-                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> - <span class="bracket-score">0</span></li>
+                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> Lebanon - Field 5 <span class="bracket-score">0</span></li>
                         <li class="game game-spacer"></li>
-                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> - <span class="bracket-score">0</span></li>
+                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> India - 6:15pm<span class="bracket-score">0</span></li>
 
                         <li class="spacer">&nbsp;</li>
 
-                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> - <span class="bracket-score">0</span></li>
+                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> Costa Rica - Field 4 <span class="bracket-score">0</span></li>
                         <li class="game game-spacer"></li>
-                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> - <span class="bracket-score">0</span></li>
+                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> Nigeria - 6:15pm <span class="bracket-score">0</span></li>
 
                         <li class="spacer">&nbsp;</li>
 
-                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> - <span class="bracket-score">0</span></li>
+                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> Cuba - Field 3 <span class="bracket-score">0</span></li>
                         <li class="game game-spacer"></li>
-                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> - <span class="bracket-score">0</span></li>
+                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> Fiji - 6:15pm <span class="bracket-score">0</span></li>
 
                         <li class="spacer">&nbsp;</li>
                     </ul>
                     <ul class="round round-3">
                         <li class="spacer">&nbsp;</li>
 
-                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> - <span class="bracket-score">0</span></li>
+                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> Field 1 <span class="bracket-score">0</span></li>
                         <li class="game game-spacer"></li>
-                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> - <span class="bracket-score">0</span></li>
+                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> 7:45pm <span class="bracket-score">0</span></li>
 
                         <li class="spacer">&nbsp;</li>
 
-                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> - <span class="bracket-score">0</span></li>
+                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> Field 3 <span class="bracket-score">0</span></li>
                         <li class="game game-spacer"></li>
-                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> - <span class="bracket-score">0</span></li>
+                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> 7:45pm <span class="bracket-score">0</span></li>
 
                         <li class="spacer">&nbsp;</li>
                     </ul>
                     <ul class="round round-4">
                         <li class="spacer">&nbsp;</li>
 
-                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> - <span class="bracket-score">0</span></li>
+                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> Field 1 <span class="bracket-score">0</span></li>
                         <li class="game game-spacer"></li>
-                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> - <span class="bracket-score">0</span></li>
+                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> 9:15pm <span class="bracket-score">0</span></li>
 
                         <li class="spacer">&nbsp;</li>
                     </ul>
