--- a/info.html
+++ b/info.html
@@ -130,13 +130,13 @@
                     <ul class="round round-3">
                         <li class="spacer">&nbsp;</li>
 
-                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> Norway - Field 1 <span class="bracket-score">0</span></li>
+                        <li class="game game-top winner"><span class="flag-icon  flag-icon-bracket"></span> Norway - Field 1 <span class="bracket-score">2</span></li>
                         <li class="game game-spacer"></li>
-                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> Iceland - 7pm <span class="bracket-score">0</span></li>
+                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> Iceland - 7pm <span class="bracket-score">1</span></li>
 
                         <li class="spacer">&nbsp;</li>
 
-                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> USA - Field 3 <span class="bracket-score">0</span></li>
+                        <li class="game game-top winner"><span class="flag-icon  flag-icon-bracket"></span> USA - Field 3 <span class="bracket-score">7</span></li>
                         <li class="game game-spacer"></li>
                         <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> Ireland - 7pm  <span class="bracket-score">0</span></li>
 
@@ -146,16 +146,16 @@
                     <ul class="round round-4">
                         <li class="spacer">&nbsp;</li>
 
-                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> Field 1 <span class="bracket-score">0</span></li>
+                        <li class="game game-top winner"><span class="flag-icon  flag-icon-bracket"></span> USA - Field 1 <span class="bracket-score">1</span></li>
                         <li class="game game-spacer"></li>
-                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> 8:30pm <span class="bracket-score">0</span></li>
+                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span>Norway - 8:30pm <span class="bracket-score">0</span></li>
 
                         <li class="spacer">&nbsp;</li>
                     </ul>
 
                     <ul class="round round-5">
                         <li class="spacer"></li>
-                        <li id="tournament-winner" class="winner"><i class="fa fa-trophy" aria-hidden="true"></i> <span class="flag-icon "></span> Winner</li>
+                        <li id="tournament-winner" class="winner"><i class="fa fa-trophy" aria-hidden="true"></i> <span class="flag-icon "></span> USA</li>
                         <li class="spacer"></li>
                     </ul>
 
@@ -343,13 +343,13 @@
                     <ul class="round round-2">
                         <li class="spacer">&nbsp;</li>
 
-                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> Yemen - Field 1<span class="bracket-score">0</span></li>
+                        <li class="game game-top winner"><span class="flag-icon  flag-icon-bracket"></span> Yemen - Field 1<span class="bracket-score">3</span></li>
                         <li class="game game-spacer"></li>
-                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> Iran - 6:15pm <span class="bracket-score">0</span></li>
+                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> Iran - 6:15pm <span class="bracket-score">2</span></li>
 
                         <li class="spacer">&nbsp;</li>
 
-                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> Lebanon - Field 5 <span class="bracket-score">0</span></li>
+                        <li class="game game-top winner"><span class="flag-icon  flag-icon-bracket"></span> Lebanon - Field 5 <span class="bracket-score">1</span></li>
                         <li class="game game-spacer"></li>
                         <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> India - 6:15pm<span class="bracket-score">0</span></li>
 
@@ -357,11 +357,11 @@
 
                         <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> Costa Rica - Field 4 <span class="bracket-score">0</span></li>
                         <li class="game game-spacer"></li>
-                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> Nigeria - 6:15pm <span class="bracket-score">0</span></li>
+                        <li class="game game-bottom winner"><span class="flag-icon flag-icon-bracket"></span> Nigeria - 6:15pm <span class="bracket-score">2</span></li>
 
                         <li class="spacer">&nbsp;</li>
 
-                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> Cuba - Field 3 <span class="bracket-score">0</span></li>
+                        <li class="game game-top winner"><span class="flag-icon  flag-icon-bracket"></span> Cuba - Field 3 <span class="bracket-score">2</span></li>
                         <li class="game game-spacer"></li>
                         <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> Fiji - 6:15pm <span class="bracket-score">0</span></li>
 
@@ -370,30 +370,30 @@
                     <ul class="round round-3">
                         <li class="spacer">&nbsp;</li>
 
-                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> Field 1 <span class="bracket-score">0</span></li>
+                        <li class="game game-top winner"><span class="flag-icon  flag-icon-bracket"></span> Yemen - Field 1 <span class="bracket-score">1</span></li>
                         <li class="game game-spacer"></li>
-                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> 7:45pm <span class="bracket-score">0</span></li>
+                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> Lebanon - 7:45pm <span class="bracket-score">0</span></li>
 
                         <li class="spacer">&nbsp;</li>
 
-                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> Field 3 <span class="bracket-score">0</span></li>
+                        <li class="game game-top winner"><span class="flag-icon  flag-icon-bracket"></span> Nigeria - Field 3 <span class="bracket-score">5</span></li>
                         <li class="game game-spacer"></li>
-                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> 7:45pm <span class="bracket-score">0</span></li>
+                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span>Cuba - 7:45pm <span class="bracket-score">1</span></li>
 
                         <li class="spacer">&nbsp;</li>
                     </ul>
                     <ul class="round round-4">
                         <li class="spacer">&nbsp;</li>
 
-                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span> Field 1 <span class="bracket-score">0</span></li>
+                        <li class="game game-top winner"><span class="flag-icon  flag-icon-bracket"></span> Yemen - Field 1 <span class="bracket-score"> 0(4)</span></li>
                         <li class="game game-spacer"></li>
-                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> 9:15pm <span class="bracket-score">0</span></li>
+                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> Nigeria -9:15pm <span class="bracket-score">0(2)</span></li>
 
                         <li class="spacer">&nbsp;</li>
                     </ul>
                     <ul class="round round-5">
                         <li class="spacer"></li>
-                        <li id="tournament-winner" class="winner"><i class="fa fa-trophy" aria-hidden="true"></i> <span class="flag-icon "></span> Winner</li>
+                        <li id="tournament-winner" class="winner"><i class="fa fa-trophy" aria-hidden="true"></i> <span class="flag-icon "></span> Yemen</li>
                         <li class="spacer"></li>
                     </ul>
                 </main>
