testing the repo

--- a/faq.html
+++ b/faq.html
@@ -35,8 +35,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">NU World Cup 2017</a>
-<!--                <a class="navbar-brand wicked" href="https://www.facebook.com/events/582923421909949/?ti=icl">Wicked Cup</a>-->
+                <!-- <a class="navbar-brand" href="index.html">NU World Cup 2017</a> -->
+                <a class="navbar-brand wicked" href="index.html">Wicked Cup</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -67,7 +67,7 @@
 
 
     <div class="panel-group" id="accordion">
-        <div class="faqHeader">Map</div>
+        <div class="faqHeader">Map.</div>
         <div style="text-align:center;"><img src="../img/fields.PNG"></div>
         <div class="faqHeader">Registration</div>
         <div class="panel panel-default">
