--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">NU World Cup 2017</a>
+                <!-- <a class="navbar-brand" href="index.html">NU World Cup 2017</a> -->
+                <a class="navbar-brand wicked" href="index.html">Wicked Cup</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
