Revert "groups adjusted to wicked world cup"

--- a/info.html
+++ b/info.html
@@ -408,7 +408,7 @@
                 <h1><strong>Groups</strong></h1>
             </div>
             <div class="col-md-12"><!-- Co-ed Groups -->
-                <h2>Wicked World Cup</h2>
+                <h2>World Cup 2017</h2>
                 <div class="row">
                     <a href="#group-a-f" id="group-a">
                     </a>
@@ -419,7 +419,7 @@
                     <a href="#group-d-f" id="group-d">
                     </a>
                 </div>
-                <!-- <div class="row">
+                <div class="row">
                     <a href="#group-e-f" id="group-e">
                     </a>
                     <a href="#group-f-f" id="group-f">
@@ -434,20 +434,20 @@
                     </a>
                     <a href="#group-j-f" id="group-j">
                     </a>
-                </div> -->
+                </div>
             </div>
             <div class="col-md-12"> <!-- Women's Groups -->
-                <!-- <h2>Women's World Cup 2017</h2>
+                <h2>Women's World Cup 2017</h2>
                 <div class="row">
                     <a href="#group-a-w-f" id="group-a-w">
                     </a>
                     <a href="#group-b-w-f" id="group-b-w">
-                    </a> -->
+                    </a>
                 </div>
             </div>
 <!-- Add this when games have been played -->
            <div class="col-md-12">
-                <h3>Click on any group to get to that group's scheduled fixture!</h3>
+                <h3>Click on any group (Co-ed or Women's) to get to that group's scheduled fixture!</h3>
             </div>
 
         </div>
@@ -486,7 +486,7 @@
                         <h2>Group D</h2>
                     </div>
                 </div>
-                <!-- <div class="row group-row" id="group-e-f">
+                <div class="row group-row" id="group-e-f">
                     <div class="col-md-12 fixture-group-title">
                         <h2>Group E</h2>
                     </div>
@@ -514,13 +514,13 @@
                 <div class="row group-row" id="group-j-f">
                     <div class="col-md-12 fixture-group-title">
                         <h2>Group J</h2>
-                    </div> -->
+                    </div>
                 </div>
             </div>
             <div class="col-lg-11 col-md-11 col-sm-10 col-xs-12" id="wwc-fixtures">
                 <div class="row">
                     <div class="col-md-12">
-<!--                         <h2><strong>Women's World Cup 2017 Group Stage</strong></h2>
+                        <h2><strong>Women's World Cup 2017 Group Stage</strong></h2>
                     </div>
                 </div>
                 <div class="row group-row" id="group-a-w-f">
@@ -530,7 +530,7 @@
                 </div>
                 <div class="row group-row" id="group-b-w-f">
                     <div class="col-md-12 fixture-group-title">
-                        <h2>Group 2</h2> -->
+                        <h2>Group 2</h2>
                     </div>
                 </div>
             </div>
