Changed the tournament info for Wicked World Cup

--- a/info.html
+++ b/info.html
@@ -123,23 +123,52 @@
             <div class="col-md-12"><h1><strong>Knockout Stage</strong></h1></div>
             <div class="col-md-12">
                 <div class="row">
-                    <h2 class="final-title"><strong>Women's World Cup Bracket</strong></h2>
+                    <!-- <h2 class="final-title"><strong>Women's World Cup Bracket</strong></h2> -->
+                    <h2 class="final-title"><strong>Wicked World Cup</strong></h2>
                 </div>
 
                 <main id="tournament">
 
+                    <ul class="round round-2">
+                        <li class="spacer">&nbsp;</li>
+
+                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span>Grp A 1st - Field 1<span class="bracket-score"><!--score goes here --></span></li>
+                        <li class="game game-spacer"></li>
+                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span>Grp D 2nd - 2:30pm<span class="bracket-score"></span></li>
+
+                        <li class="spacer">&nbsp;</li>
+
+                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span>Grp D 1st - Field 2<span class="bracket-score"></span></li>
+                        <li class="game game-spacer"></li>
+                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span>Grp A 2nd - 2:30pm<span class="bracket-score"></span></li>
+
+                        <li class="spacer">&nbsp;</li>
+
+                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span>Grp B 1st - Field 5<span class="bracket-score"></span></li>
+                        <li class="game game-spacer"></li>
+                        <li class="game game-bottom"><span class="flag-icon flag-icon-bracket"></span>Grp C 2nd - 2:30pm<span class="bracket-score"></span></li>
+
+                        <li class="spacer">&nbsp;</li>
+
+                        <li class="game game-top"><span class="flag-icon  flag-icon-bracket"></span>Grp C 1st - Field 6<span class="bracket-score"></span></li>
+                        <li class="game game-spacer"></li>
+                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span>Grp B 2nd - 2:30pm<span class="bracket-score"></span></li>
+
+                        <li class="spacer">&nbsp;</li>
+                    </ul>
+
                     <ul class="round round-3">
                         <li class="spacer">&nbsp;</li>
 
-                        <li class="game game-top winner"><span class="flag-icon  flag-icon-bracket"></span> Norway - Field 1 <span class="bracket-score">2</span></li>
+                        <li class="game game-top winner"><span class="flag-icon  flag-icon-bracket"></span> <span class="bracket-score"></span></li>
                         <li class="game game-spacer"></li>
-                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> Iceland - 7pm <span class="bracket-score">1</span></li>
+                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span><span class="bracket-score"></span></li>  <!--  Score goes in the span. Look for winner too -->
 
                         <li class="spacer">&nbsp;</li>
 
-                        <li class="game game-top winner"><span class="flag-icon  flag-icon-bracket"></span> USA - Field 3 <span class="bracket-score">7</span></li>
+                        <li class="game game-top winner"><span class="flag-icon  flag-icon-bracket"></span><span class="bracket-score"></span></li>
                         <li class="game game-spacer"></li>
-                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> Ireland - 7pm  <span class="bracket-score">0</span></li>
+                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span><span class="bracket-score"></span></li>
 
                         <li class="spacer">&nbsp;</li>
                     </ul>
@@ -147,16 +176,16 @@
                     <ul class="round round-4">
                         <li class="spacer">&nbsp;</li>
 
-                        <li class="game game-top winner"><span class="flag-icon  flag-icon-bracket"></span> USA - Field 1 <span class="bracket-score">1</span></li>
+                        <li class="game game-top winner"><span class="flag-icon  flag-icon-bracket"></span><span class="bracket-score"></span></li>
                         <li class="game game-spacer"></li>
-                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span>Norway - 8:30pm <span class="bracket-score">0</span></li>
+                        <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span><span class="bracket-score"></span></li>
 
                         <li class="spacer">&nbsp;</li>
                     </ul>
 
                     <ul class="round round-5">
                         <li class="spacer"></li>
-                        <li id="tournament-winner" class="winner"><i class="fa fa-trophy" aria-hidden="true"></i> <span class="flag-icon "></span> USA</li>
+                        <li id="tournament-winner" class="winner"><i class="fa fa-trophy" aria-hidden="true"></i> <span class="flag-icon "></span></li>
                         <li class="spacer"></li>
                     </ul>
 
@@ -169,7 +198,7 @@
 
 
 
-            <div class="col-md-12">
+            <!-- <div class="col-md-12">
                 <h2 class="final-title"><strong>World Cup 2017</strong></h2>
 
                 <main id="tournament">
@@ -344,7 +373,7 @@
                     <ul class="round round-2">
                         <li class="spacer">&nbsp;</li>
 
-                        <li class="game game-top winner"><span class="flag-icon  flag-icon-bracket"></span> Yemen - Field 1<span class="bracket-score">3</span></li>
+                        <li class="game game-top winner"><span class="flag-icon  flag-icon-bracket"></span> Yemen - Field 1<span class="bracket-score">0</span></li>
                         <li class="game game-spacer"></li>
                         <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span> Iran - 6:15pm <span class="bracket-score">2</span></li>
 
@@ -380,7 +409,6 @@
                         <li class="game game-top winner"><span class="flag-icon  flag-icon-bracket"></span> Nigeria - Field 3 <span class="bracket-score">5</span></li>
                         <li class="game game-spacer"></li>
                         <li class="game game-bottom "><span class="flag-icon flag-icon-bracket"></span>Cuba - 7:45pm <span class="bracket-score">1</span></li>
-
                         <li class="spacer">&nbsp;</li>
                     </ul>
                     <ul class="round round-4">
@@ -398,7 +426,7 @@
                         <li class="spacer"></li>
                     </ul>
                 </main>
-            </div>
+            </div> -->
 
         </div>
       
@@ -408,7 +436,7 @@
                 <h1><strong>Groups</strong></h1>
             </div>
             <div class="col-md-12"><!-- Co-ed Groups -->
-                <h2>World Cup 2017</h2>
+                <!-- <h2>World Cup 2017</h2> -->
                 <div class="row">
                     <a href="#group-a-f" id="group-a">
                     </a>
@@ -419,7 +447,7 @@
                     <a href="#group-d-f" id="group-d">
                     </a>
                 </div>
-                <div class="row">
+                <!-- <div class="row">
                     <a href="#group-e-f" id="group-e">
                     </a>
                     <a href="#group-f-f" id="group-f">
@@ -434,9 +462,9 @@
                     </a>
                     <a href="#group-j-f" id="group-j">
                     </a>
-                </div>
+                </div> -->
             </div>
-            <div class="col-md-12"> <!-- Women's Groups -->
+            <!-- <div class="col-md-12">
                 <h2>Women's World Cup 2017</h2>
                 <div class="row">
                     <a href="#group-a-w-f" id="group-a-w">
@@ -444,10 +472,10 @@
                     <a href="#group-b-w-f" id="group-b-w">
                     </a>
                 </div>
-            </div>
+            </div> -->
 <!-- Add this when games have been played -->
            <div class="col-md-12">
-                <h3>Click on any group (Co-ed or Women's) to get to that group's scheduled fixture!</h3>
+                <h3>Click on any group to get to that group's scheduled fixture!</h3>
             </div>
 
         </div>
@@ -463,7 +491,7 @@
             <div class="col-lg-11 col-md-11 col-sm-10 col-xs-12" id="wc-fixtures">
                 <div class="row">
                     <div class="col-md-12">
-                        <h2><strong>World Cup 2017 Group Stage</strong></h2>
+                        <h2><strong>Wicked Cup Group Stage</strong></h2>
                     </div>
                 </div>
                 <div class="row group-row" id="group-a-f">
@@ -486,7 +514,7 @@
                         <h2>Group D</h2>
                     </div>
                 </div>
-                <div class="row group-row" id="group-e-f">
+                <!-- <div class="row group-row" id="group-e-f">
                     <div class="col-md-12 fixture-group-title">
                         <h2>Group E</h2>
                     </div>
@@ -515,10 +543,10 @@
                     <div class="col-md-12 fixture-group-title">
                         <h2>Group J</h2>
                     </div>
-                </div>
+                </div> -->
             </div>
             <div class="col-lg-11 col-md-11 col-sm-10 col-xs-12" id="wwc-fixtures">
-                <div class="row">
+                <!-- <div class="row">
                     <div class="col-md-12">
                         <h2><strong>Women's World Cup 2017 Group Stage</strong></h2>
                     </div>
@@ -532,7 +560,7 @@
                     <div class="col-md-12 fixture-group-title">
                         <h2>Group 2</h2>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
         <hr>
